Add docs and refactor delays
